Added to user fileds: theme and locale.
